✨ Add select location page

--- a/templates/mar_saba.html
+++ b/templates/mar_saba.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mar Saba | APP NAME</title>
+    <title>Mar Saba | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -68,9 +68,9 @@
             <div class="hero_heading_underline"></div>
             <p class="about_topic">The Holy Lavra of Saint Sabbas, known in Arabic and Syriac as Mar Saba (Syriac: ܕܝܪܐ
                 ܕܡܪܝ ܣܒܐ, Arabic: دير مار سابا; Hebrew: מנזר מר סבא; Greek: Ἱερὰ Λαύρα τοῦ Ὁσίου Σάββα τοῦ Ἡγιασμένου)
-                and historically as the Great Laura of Saint Sabas,[1] is a Greek Orthodox monastery overlooking the
-                Kidron Valley in the Bethlehem Governorate of Palestine, in the West Bank,[2] at a point halfway between
-                Bethlehem and the Dead Sea.[3] The monks of Mar Saba and those of subsidiary houses are known as
+                and historically as the Great Laura of Saint Sabas, is a Greek Orthodox monastery overlooking the
+                Kidron Valley in the Bethlehem Governorate of Palestine, in the West Bank, at a point halfway between
+                Bethlehem and the Dead Sea. The monks of Mar Saba and those of subsidiary houses are known as
                 Sabaites.
             </p>
             <p class="about_topic">Mar Saba is considered to be one of the oldest continuously inhabited monasteries in
@@ -143,12 +143,12 @@
             container: 'map',
             style: 'mapbox://styles/harshal-0902/cl9tyr861003o14o4ce5j3vuk',
             zoom: 20,
-            center: [31.705, 35.331111],
+            center: [35.331111, 31.705],
             pitch: 60,
             antialias: true
         });
 
-        const modelOrigin = [31.705, 35.331111];
+        const modelOrigin = [35.331111, 31.705];
         const modelAltitude = 0;
         const modelRotate = [Math.PI / 2, 0, 0];
 
