--- a/templates/the_great_pyramid_of_giza.html
+++ b/templates/the_great_pyramid_of_giza.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Great Pyramid of Giza | APP NAME</title>
+    <title>Great Pyramid of Giza | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -67,7 +67,7 @@
         <div class="center">
             <div class="hero_heading_underline"></div>
             <p class="about_topic">The Great Pyramid of Giza[a] is the largest Egyptian pyramid and the tomb of Fourth
-                Dynasty pharaoh Khufu. Built in the early 26th century BC during a period of around 27 years,[3] the
+                Dynasty pharaoh Khufu. Built in the early 26th century BC during a period of around 27 years, the
                 pyramid is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely
                 intact. As part of the Giza pyramid complex, it borders present-day Giza in Greater Cairo, Egypt.
 
