--- a/templates/valley_of_the_kings_tombs__luxor_egypt.html
+++ b/templates/valley_of_the_kings_tombs__luxor_egypt.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valley of the Kings | APP NAME</title>
+    <title>Valley of the Kings | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -67,13 +67,13 @@
         <div class="center">
             <div class="hero_heading_underline"></div>
             <p class="about_topic">The Valley of the Kings (Arabic: وادي الملوك Wādī al-Mulūk; Coptic: ϫⲏⲙⲉ, romanized:
-                džēme[1] Late Coptic: [ˈʃɪ.mæ]), also known as the Valley of the Gates of the Kings (Arabic: وادي أبواب
-                الملوك Wādī Abwāb al-Mulūk),[2] is a valley in Egypt where, for a period of nearly 500 years from the
+                džēme Late Coptic: [ˈʃɪ.mæ]), also known as the Valley of the Gates of the Kings (Arabic: وادي أبواب
+                الملوك Wādī Abwāb al-Mulūk), is a valley in Egypt where, for a period of nearly 500 years from the
                 16th to 11th century BC, rock-cut tombs were excavated for the pharaohs and powerful nobles of the New
                 Kingdom (the Eighteenth to the Twentieth Dynasties of Ancient Egypt).</p>
 
             <p class="about_topic">The valley stands on the west bank of the Nile opposite Thebes (modern Luxor), within
-                the heart of the Theban Necropolis.[5] The wadi consists of two valleys: the East Valley (where the
+                the heart of the Theban Necropolis. The wadi consists of two valleys: the East Valley (where the
                 majority of the royal tombs are situated) and the West Valley (Valley of the Monkeys). This work is
                 based on "Valley of the Kings Tombs – Luxor, Egypt"
                 (https://sketchfab.com/3d-models/valley-of-the-kings-tombs-luxor-egypt-f139edcc7b764f6ebde27be77ce53eca)
