--- a/templates/coyote_village_mesa_verde.html
+++ b/templates/coyote_village_mesa_verde.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesa Verde | APP NAME</title>
+    <title>Mesa Verde | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
