--- a/templates/histria_fotress.html
+++ b/templates/histria_fotress.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histria Fotress | APP NAME</title>
+    <title>Histria | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -63,7 +63,7 @@
 
     <section class="home" id="home">
 
-        <h1 class="hero_heading">Histria Fotress</h1>
+        <h1 class="hero_heading">Histria</h1>
         <div class="center">
             <div class="hero_heading_underline"></div>
             <p class="about_topic">Histria or Istros (Ancient Greek: Ἰστρίη, Thracian river god, Danube), was a Greek
@@ -112,12 +112,12 @@
             container: 'map',
             style: 'mapbox://styles/harshal-0902/cl9tyr861003o14o4ce5j3vuk',
             zoom: 20,
-            center: [48.095556, 8.155],
+            center: [8.155, 48.095556],
             pitch: 60,
             antialias: true
         });
 
-        const modelOrigin = [48.095556, 8.155];
+        const modelOrigin = [8.155, 48.095556];
         const modelAltitude = 0;
         const modelRotate = [Math.PI / 2, 0, 0];
 
