--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APP NAME</title>
+    <title>TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -367,7 +367,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -404,7 +404,7 @@
     <section class="home" id="home">
 
         <div class="content" data-aos="fade-right">
-            <h3>APP NAME</h3>
+            <h3>TheLostHistory</h3>
             <p>About the web app</p>
             <a href="./locations.html"><button class="btn">View Locations</button></a>
         </div>
