--- a/templates/karahan_tepe.html
+++ b/templates/karahan_tepe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karahan Tepe | APP NAME</title>
+    <title>Karahan Tepe | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -141,12 +141,12 @@
             container: 'map',
             style: 'mapbox://styles/harshal-0902/cl9tyr861003o14o4ce5j3vuk',
             zoom: 19,
-            center: [37.091944, 39.301389],
+            center: [39.301389, 37.091944],
             pitch: 60,
             antialias: true
         });
 
-        const modelOrigin = [37.091944, 39.301389];
+        const modelOrigin = [39.301389, 37.091944];
         const modelAltitude = 0;
         const modelRotate = [Math.PI / 2, 0, 0];
 
