--- a/templates/xian.html
+++ b/templates/xian.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xi'an | APP NAME</title>
+    <title>Xi'an | TheLostHistory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -27,7 +27,7 @@
 
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">Angle Recruiter</div>
+            <div class="logo_name">TheLostHistory</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
@@ -66,18 +66,17 @@
         <h1 class="hero_heading">Xi'an</h1>
         <div class="center">
             <div class="hero_heading_underline"></div>
-            <p class="about_topic">Xi'an (UK: /ʃiːˈæn/ shee-AN, US: /ʃiːˈɑːn/ shee-AHN; Chinese: 西安; pinyin:
-                Xī'ān; Chinese: [ɕí.án] (listen)), frequently spelled as Xian and also known by other names, is the
-                capital of Shaanxi Province. A sub-provincial city on the Guanzhong Plain, the city is the third most
-                populous city in Western China, after Chongqing and Chengdu, as well as the most populous city in
-                Northwest China. Its total population was 12,952,907 as of the 2020 census. The total urban
-                population was 9.28 million.</p>
-            <p class="about_topic">Since the 1980s, as part of the economic growth of inland China especially for the
-                central and northwest regions, Xi'an has re-emerged as a cultural, industrial, political and educational
-                centre of the entire central-northwest region, with many facilities for research and development. Xi'an
-                currently holds sub-provincial status, administering 11 districts and 2 counties. In 2020, Xi'an was
-                ranked as a Beta- (global second tier) city by the Globalization and World Cities Research Network,[10]
-                and, according to the country's own ranking, ranked 17th.This work is based on "Ancient Chinese
+            <p class="about_topic">The Lantian Man was discovered in 1963 in Lantian County, 50 km (31 mi) southeast of
+                Xi'an, and dates back to at least 500,000 years before the present time. A 6,500-year-old Neolithic
+                village, Banpo, was discovered in 1953 on the eastern outskirts of the city proper, which contains the
+                remains of several well organized Neolithic settlements carbon dated to 5,600–6,700 years ago. The site
+                is now home to the Xi'an Banpo Museum, built in 1957 to preserve the archaeological collection.</p>
+            <p class="about_topic">Xi'an became a cultural and political centre of China in the 11th century BC with the
+                founding of the Zhou dynasty. The capital of Zhou was established in the twin settlements of Fengjing
+                (丰京) and Haojing, together known as Fenghao, located southwest of contemporary Xi'an. The settlement was
+                also known as Zōngzhōu (宗周) to indicate its role as the capital of the vassal states. In 738 BC,
+                King Ping of Zhou moved the capital to Luoyang due to political unrest. This work is based on "Ancient
+                Chinese
                 courtyard Park"
                 (https://sketchfab.com/3d-models/ancient-chinese-courtyard-park-55d8371278844dbbbe43e1f867b5fcde) by
                 noyou (https://sketchfab.com/zsm123) licensed under CC-BY-4.0
