--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -20,349 +20,367 @@
 </head>
 
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
-            text-decoration: none;
-            outline: none;
-            border: none;
-            text-transform: capitalize;
-            transition: all 0.2s linear;
-        }
+        <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+        text-decoration: none;
+        outline: none;
+        border: none;
+        text-transform: capitalize;
+        transition: all 0.2s linear;
+      }
 
-        html {
-            font-size: 62.5%;
-            overflow-x: hidden;
-        }
+      html {
+        font-size: 62.5%;
+        overflow-x: hidden;
+      }
 
-        .sidebar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 78px;
-            background: #11101D;
-            padding: 6px 14px;
-            z-index: 99;
-            transition: all 0.5s ease;
-        }
+      .sidebar {
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 78px;
+        background: #11101d;
+        padding: 6px 14px;
+        z-index: 99;
+        transition: all 0.5s ease;
+      }
 
-        .sidebar.open {
-            width: 250px;
-        }
+      .sidebar.open {
+        width: 250px;
+      }
 
-        .sidebar .logo-details {
-            height: 60px;
-            display: flex;
-            align-items: center;
-            position: relative;
-        }
+      .sidebar .logo-details {
+        height: 60px;
+        display: flex;
+        align-items: center;
+        position: relative;
+      }
 
-        .sidebar .logo-details .icon {
-            opacity: 0;
-            transition: all 0.5s ease;
-        }
+      .sidebar .logo-details .icon {
+        opacity: 0;
+        transition: all 0.5s ease;
+      }
 
-        .sidebar .logo-details .logo_name {
-            padding-top: 20px;
-            color: #fff;
-            font-size: 20px;
-            font-weight: 600;
-            opacity: 0;
-            transition: all 0.5s ease;
-        }
+      .sidebar .logo-details .logo_name {
+        padding-top: 20px;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        opacity: 0;
+        transition: all 0.5s ease;
+      }
 
-        .sidebar.open .logo-details .icon,
-        .sidebar.open .logo-details .logo_name {
-            opacity: 1;
-        }
+      .sidebar.open .logo-details .icon,
+      .sidebar.open .logo-details .logo_name {
+        opacity: 1;
+      }
 
-        .sidebar .logo-details #btn {
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translateY(-50%);
-            font-size: 22px;
-            transition: all 0.4s ease;
-            font-size: 23px;
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.5s ease;
-        }
+      .sidebar .logo-details #btn {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        font-size: 22px;
+        transition: all 0.4s ease;
+        font-size: 23px;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.5s ease;
+      }
 
-        .sidebar.open .logo-details #btn {
-            text-align: right;
-        }
+      .sidebar.open .logo-details #btn {
+        text-align: right;
+      }
 
-        .sidebar i {
-            color: #fff;
-            height: 60px;
-            min-width: 50px;
-            font-size: 28px;
-            text-align: center;
-            line-height: 60px;
-        }
+      .sidebar i {
+        color: #fff;
+        height: 60px;
+        min-width: 50px;
+        font-size: 28px;
+        text-align: center;
+        line-height: 60px;
+      }
 
-        .sidebar .nav-list {
-            margin-top: 20px;
-            height: 100%;
-        }
+      .sidebar .nav-list {
+        margin-top: 20px;
+        height: 100%;
+      }
 
-        .sidebar li {
-            position: relative;
-            margin: 8px 0;
-            list-style: none;
-        }
+      .sidebar li {
+        position: relative;
+        margin: 8px 0;
+        list-style: none;
+      }
 
+      .sidebar li .tooltip {
+        position: absolute;
+        top: -20px;
+        left: calc(100% + 15px);
+        z-index: 3;
+        background: #fff;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        padding: 6px 12px;
+        border-radius: 4px;
+        font-size: 15px;
+        font-weight: 400;
+        opacity: 0;
+        white-space: nowrap;
+        pointer-events: none;
+        transition: 0s;
+      }
+
+      .sidebar li:hover .tooltip {
+        opacity: 1;
+        pointer-events: auto;
+        transition: all 0.4s ease;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      .sidebar.open li .tooltip {
+        display: none;
+      }
+
+      .sidebar li a {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        border-radius: 12px;
+        align-items: center;
+        text-decoration: none;
+        transition: all 0.4s ease;
+        background: #11101d;
+      }
+
+      .sidebar li a:hover {
+        background: #fff;
+      }
+
+      .sidebar li a .links_name {
+        color: #fff;
+        font-size: 15px;
+        font-weight: 400;
+        white-space: nowrap;
+        opacity: 0;
+        pointer-events: none;
+        transition: 0.4s;
+      }
+
+      .sidebar.open li a .links_name {
+        opacity: 1;
+        pointer-events: auto;
+      }
+
+      .sidebar li a:hover .links_name,
+      .sidebar li a:hover i {
+        transition: all 0.5s ease;
+        color: #11101d;
+      }
+
+      .sidebar li i {
+        height: 50px;
+        line-height: 50px;
+        font-size: 18px;
+        border-radius: 12px;
+      }
+
+      .sidebar li.profile {
+        position: fixed;
+        height: 60px;
+        width: 78px;
+        left: 0;
+        bottom: -8px;
+        padding: 10px 14px;
+        background: #1d1b31;
+        transition: all 0.5s ease;
+        overflow: hidden;
+      }
+
+      .sidebar .profile #log_out {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        background: #1d1b31;
+        width: 100%;
+        height: 60px;
+        line-height: 60px;
+        border-radius: 0px;
+        transition: all 0.5s ease;
+      }
+
+      .sidebar.open .profile #log_out {
+        width: 50px;
+        background: none;
+      }
+
+      .home-section {
+        position: relative;
+        background: #e4e9f7;
+        min-height: 100vh;
+        top: 0;
+        left: 78px;
+        width: calc(100% - 78px);
+        transition: all 0.5s ease;
+        z-index: 2;
+      }
+
+      .sidebar.open ~ .home-section {
+        left: 250px;
+        width: calc(100% - 250px);
+      }
+
+      .home-section .text {
+        display: inline-block;
+        color: #11101d;
+        font-size: 25px;
+        font-weight: 500;
+        margin: 18px;
+      }
+
+      @media (max-width: 420px) {
         .sidebar li .tooltip {
-            position: absolute;
-            top: -20px;
-            left: calc(100% + 15px);
-            z-index: 3;
-            background: #fff;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-            padding: 6px 12px;
-            border-radius: 4px;
-            font-size: 15px;
-            font-weight: 400;
-            opacity: 0;
-            white-space: nowrap;
-            pointer-events: none;
-            transition: 0s;
+          display: none;
         }
+      }
 
-        .sidebar li:hover .tooltip {
-            opacity: 1;
-            pointer-events: auto;
-            transition: all 0.4s ease;
-            top: 50%;
-            transform: translateY(-50%);
+      .home-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+      }
+
+      section {
+        min-height: 100vh;
+        padding: 1rem 10%;
+        padding-top: 8.5rem;
+      }
+
+      .btn {
+        font-size: 1.7rem;
+        padding: 0.7rem 4rem;
+        border: 3px;
+        font-weight: bold;
+        border-radius: 5rem;
+        margin-top: 1rem;
+        background: rgba(239, 157, 157, 0.792);
+        color: #333;
+        cursor: pointer;
+        border: 0.2rem solid #11101d;
+      }
+
+      .btn:hover {
+        background: #bab9bda1;
+      }
+
+      .home {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        position: relative;
+        z-index: 0;
+        overflow: hidden;
+        background-image: url("../media/img/bg.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+      }
+
+      .home::before,
+      .home::after {
+        content: "";
+        position: absolute;
+        top: 5rem;
+        right: -6rem;
+        background: #11101d;
+        border-radius: 3rem;
+        transform: rotate(-45deg);
+        height: 40rem;
+        width: 70rem;
+        z-index: -2;
+        animation: animte 1s linear 1;
+      }
+
+      @keyframes animte {
+        0% {
+          transform: rotate(45deg) translateY(-40rem);
         }
+      }
 
-        .sidebar.open li .tooltip {
-            display: none;
-        }
+      .home::before {
+        top: -7rem;
+        background: #e4e9f7;
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.1);
+        z-index: -1;
+      }
 
-        .sidebar li a {
-            display: flex;
-            height: 100%;
-            width: 100%;
-            border-radius: 12px;
-            align-items: center;
-            text-decoration: none;
-            transition: all 0.4s ease;
-            background: #11101D;
-        }
+      .home .image {
+        flex: 1 1 39rem;
+      }
 
-        .sidebar li a:hover {
-            background: #FFF;
-        }
+      .home .image img {
+        width: 100%;
+      }
 
-        .sidebar li a .links_name {
-            color: #fff;
-            font-size: 15px;
-            font-weight: 400;
-            white-space: nowrap;
-            opacity: 0;
-            pointer-events: none;
-            transition: 0.4s;
-        }
+      .home .content {
+        flex: 1 1 39rem;
+        background-color: rgba(218, 198, 203, 0.732);
+        width: 30rem;
+        border-color: black;
+        border-style:solid;
+        border-width: 1px;
+        border-top-width: 0.9rem;
+        border-right-width: 1rem;
+        border-radius: 25px;
+        padding:5rem;
+        margin-right: 66rem;
+    
+        
+      }
 
-        .sidebar.open li a .links_name {
-            opacity: 1;
-            pointer-events: auto;
-        }
+      .home .content h3 {
+        color: rgb(22, 22, 22);
+        font-size: 6rem;
+      }
 
-        .sidebar li a:hover .links_name,
-        .sidebar li a:hover i {
-            transition: all 0.5s ease;
-            color: #11101D;
-        }
+      .home .content p {
+        color: rgb(43, 41, 41);
+        font-size: 2rem;
+        padding: 1rem 0;
+        margin-left: 1rem;
+      }
 
-        .sidebar li i {
-            height: 50px;
-            line-height: 50px;
-            font-size: 18px;
-            border-radius: 12px;
-        }
-
-        .sidebar li.profile {
-            position: fixed;
-            height: 60px;
-            width: 78px;
-            left: 0;
-            bottom: -8px;
-            padding: 10px 14px;
-            background: #1d1b31;
-            transition: all 0.5s ease;
-            overflow: hidden;
-        }
-
-        .sidebar .profile #log_out {
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translateY(-50%);
-            background: #1d1b31;
-            width: 100%;
-            height: 60px;
-            line-height: 60px;
-            border-radius: 0px;
-            transition: all 0.5s ease;
-        }
-
-        .sidebar.open .profile #log_out {
-            width: 50px;
-            background: none;
-        }
-
-        .home-section {
-            position: relative;
-            background: #E4E9F7;
-            min-height: 100vh;
-            top: 0;
-            left: 78px;
-            width: calc(100% - 78px);
-            transition: all 0.5s ease;
-            z-index: 2;
-        }
-
-        .sidebar.open~.home-section {
-            left: 250px;
-            width: calc(100% - 250px);
-        }
-
-        .home-section .text {
-            display: inline-block;
-            color: #11101d;
-            font-size: 25px;
-            font-weight: 500;
-            margin: 18px
-        }
-
-        @media (max-width: 420px) {
-            .sidebar li .tooltip {
-                display: none;
-            }
-        }
-
-        .home-section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-        }
-
-        section {
-            min-height: 100vh;
-            padding: 1rem 10%;
-            padding-top: 8.5rem;
-        }
-
-        .btn {
-            font-size: 1.7rem;
-            padding: 0.7rem 4rem;
-            border-radius: 5rem;
-            margin-top: 1rem;
-            background: none;
-            color: #333;
-            cursor: pointer;
-            border: 0.2rem solid #11101D;
-        }
-
-        .btn:hover {
-            background: #2a2744;
-        }
-
-        .home {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            position: relative;
-            z-index: 0;
-            overflow: hidden;
-        }
-
-        .home::before,
-        .home::after {
-            content: "";
-            position: absolute;
-            top: 5rem;
-            right: -6rem;
-            background: #11101D;
-            border-radius: 3rem;
-            transform: rotate(-45deg);
-            height: 40rem;
-            width: 70rem;
-            z-index: -2;
-            animation: animte 1s linear 1;
-        }
-
-        @keyframes animte {
-            0% {
-                transform: rotate(45deg) translateY(-40rem);
-            }
-        }
-
-        .home::before {
-            top: -7rem;
-            background: #E4E9F7;
-            box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.1);
-            z-index: -1;
-        }
-
-        .home .image {
-            flex: 1 1 39rem;
-        }
-
-        .home .image img {
-            width: 100%;
-        }
-
+      @media (max-width: 768px) {
         .home .content {
-            flex: 1 1 39rem;
+          text-align: center;
         }
 
         .home .content h3 {
-            color: #333;
-            font-size: 6rem;
+          font-size: 4.5rem;
         }
 
-        .home .content p {
-            color: #666;
-            font-size: 2rem;
-            padding: 1rem 0;
+        .order .row .image {
+          display: none;
+        }
+      }
+
+      @media (max-width: 500px) {
+        html {
+          font-size: 50%;
         }
 
-        @media (max-width: 768px) {
-
-            .home .content {
-                text-align: center;
-            }
-
-            .home .content h3 {
-                font-size: 4.5rem;
-            }
-
-            .order .row .image {
-                display: none;
-            }
+        section {
+          padding: 1rem 5%;
+          padding-top: 8.5rem;
         }
-
-        @media (max-width: 500px) {
-            html {
-                font-size: 50%;
-            }
-
-            section {
-                padding: 1rem 5%;
-                padding-top: 8.5rem;
-            }
-        }
+      }
     </style>
 
     <div class="sidebar">
