:lipstick: improved ui of locations

--- a/backend/templates/locations.html
+++ b/backend/templates/locations.html
@@ -12,6 +12,22 @@
 </head>
 
 <body>
+<style>
+        .card{
+            background-color: rgba(225, 228, 245, 0.559);
+
+        }
+        button{
+            background-color: rgb(0, 0, 0);
+        }
+        button:hover{
+            background-color: rgb(95, 95, 95);
+        }
+        body{
+            background-image: url("../media/img/location.gif");
+            background-size: cover  ;
+        }
+    </style>
     <div class="sidebar">
         <div class="logo-details">
             <div class="logo_name">TheLostHistory</div>
