:bug: fixed relative paths to images and css

--- a/backend/templates/locations.html
+++ b/backend/templates/locations.html
@@ -8,7 +8,7 @@
     <title>Locations | TheLostHistory</title>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/css/loactionstyle.css">
+    <link rel="stylesheet" href="../static/css/loactionstyle.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             background-color: rgb(95, 95, 95);
         }
         body{
-            background-image: url("../media/img/location.gif");
+            background-image: url("../static/img/location.gif");
             background-size: cover  ;
         }
     </style>
@@ -69,7 +69,7 @@
     <div class="cards-list">
 
         <div class="card">
-            <img src="/static/img/Ancient Corinth.jpg" alt="Ancient Corinth">
+            <img src="../static/img/Ancient Corinth.jpg" alt="Ancient Corinth">
             <div class="card__details">
                 <div class="name">Ancient Corinth</div>
                 <p>900 BC–146 BC</p>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Castle Of La Muela.jpg" alt="Castle Of La Muela">
+            <img src="../static/img/Castle Of La Muela.jpg" alt="Castle Of La Muela">
             <div class="card__details">
                 <div class="name">Castle Of La Muela</div>
                 <p>15th century</p>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Mesa Verde.jpg" alt="Mesa Verde">
+            <img src="../static/img/Mesa Verde.jpg" alt="Mesa Verde">
             <div class="card__details">
                 <div class="name">Mesa Verde</div>
                 <p>750 AD</p>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Histria.jpg" alt="Histria">
+            <img src="../static/img/Histria.jpg" alt="Histria">
             <div class="card__details">
                 <div class="name">Histria</div>
                 <p>mid-7th century BC</p>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Karahan Tepe.jpeg" alt="Karahan Tepe">
+            <img src="../static/img/Karahan Tepe.jpeg" alt="Karahan Tepe">
             <div class="card__details">
                 <div class="name">Karahan Tepe</div>
                 <p>Pre-10th millennium BC</p>
@@ -124,7 +124,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Mar Saba.jpg" alt="Mar Saba">
+            <img src="../static/img/Mar Saba.jpg" alt="Mar Saba">
             <div class="card__details">
                 <div class="name">Mar Saba</div>
                 <p>483</p>
@@ -135,7 +135,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Temple Of Eshmun.jpg" alt="Temple Of Eshmun">
+            <img src="../static/img/Temple Of Eshmun.jpg" alt="Temple Of Eshmun">
             <div class="card__details">
                 <div class="name">Temple Of Eshmun</div>
                 <p>7th century BC</p>
@@ -146,7 +146,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Great Pyramid Of Giza.jpg" alt="Great Pyramid Of Giza">
+            <img src="../static/img/Great Pyramid Of Giza.jpg" alt="Great Pyramid Of Giza">
             <div class="card__details">
                 <div class="name">Great Pyramid Of Giza</div>
                 <p>26th century BC</p>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Pyramid Of Hellinikon.jpg" alt="Pyramid Of Hellinikon">
+            <img src="../static/img/Pyramid Of Hellinikon.jpg" alt="Pyramid Of Hellinikon">
             <div class="card__details">
                 <div class="name">Pyramid Of Hellinikon</div>
                 <p>1887</p>
@@ -168,7 +168,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Valley Of The Kings.jpeg" alt="Valley Of The Kings">
+            <img src="../static/img/Valley Of The Kings.jpeg" alt="Valley Of The Kings">
             <div class="card__details">
                 <div class="name">Valley Of The Kings</div>
                 <p>16th To 11th Century BC</p>
@@ -179,7 +179,7 @@
         </div>
 
         <div class="card">
-            <img src="/static/img/Xi'an.jpg" alt="Xi'an">
+            <img src="../static/img/Xi'an.jpg" alt="Xi'an">
             <div class="card__details">
                 <div class="name">Xi'an</div>
                 <p>13 dynasties</p>
@@ -195,7 +195,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
 
 
-    <script src="/static/js/locationscripts.js"></script>
+    <script src="../static/js/locationscripts.js"></script>
 </body>
 
 </html>
