--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -287,7 +287,7 @@
         position: relative;
         z-index: 0;
         overflow: hidden;
-        background-image: url("../media/img/bg.svg");
+        background-image: url("../static/img/bg.svg");
         background-repeat: no-repeat;
         background-size: cover;
         
