--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -423,7 +423,7 @@
 
         <div class="content" data-aos="fade-right">
             <h3>TheLostHistory</h3>
-            <p>About the web app</p>
+            <p>Take a sip and deep dive into the monuments and culture that have been lost.</p>
             <a href="/locations"><button class="btn">View Locations</button></a>
         </div>
 
