--- a/backend/templates/locations.html
+++ b/backend/templates/locations.html
@@ -172,7 +172,7 @@
             <div class="card__details">
                 <div class="name">Valley Of The Kings</div>
                 <p>16th To 11th Century BC</p>
-                <a href="/valley_of_the_kings_tombs__luxor_egypt.html">
+                <a href="/valley_of_the_kings_tombs__luxor_egypt">
                     <button>Read more</button>
                 </a>
             </div>
