--- a/backend/static/css/loactionstyle.css
+++ b/backend/static/css/loactionstyle.css
@@ -286,7 +286,7 @@ p {
     text-align: center;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -299,5 +299,65 @@ button {
     background-color: #e0efff;
     margin: 0 auto;
     display: block;
+    cursor: pointer;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+}
+
+.form{
+    display: grid;
+    place-items: center;
+}
+
+.submit_btn{
+    background-color: #25466b;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 8px;
+}
+
+.room_name{
+    font-size: 15px;
+    width: 100%;
+    border-radius: 16px;
+    padding: 4px 8px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
     cursor: pointer;
 }
